--- a/java-multiCameraServer/build.gradle
+++ b/java-multiCameraServer/build.gradle
@@ -4,7 +4,7 @@ plugins {
     id 'com.github.johnrengelman.shadow' version '4.0.3' apply false
 }
 
-mainClassName = 'Main'
+mainClassName = 'team6072.vision.Main'
 
 apply plugin: 'com.github.johnrengelman.shadow'
 
